<!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">Chess Counter</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_reset">reset</string>
    <string name="queens">Queens</string>
    <string name="towers">Towers</string>
    <string name="runners">Runners</string>
    <string name="knights">Knights</string>
    <string name="pawns">Pawns</string>
</resources>
