<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2018 Andreas Leszczynski

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    android:paddingTop="@dimen/activity_vertical_padding"
    tools:context="com.example.android.chesscounter3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">

        <Button
            android:id="@+id/button_reset"
            style="@style/style_reset_button"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/white"
            android:onClick="resetCounter"
            android:rotation="180"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/linearlayout_queen"
            style="@style/style_horizontal_linearlayout">

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="incrementQueenBlack"
                android:text="@string/button_plus" />

            <TextView
                android:id="@+id/textview_queenblack"
                style="@style/style_white_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementQueenBlack"
                android:text="@string/button_minus" />

            <ImageView
                style="@style/style_imageview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/queens"
                android:src="@drawable/chessqueen" />

            <Button
                style="@style/style_black_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementQueenWhite"
                android:text="@string/button_minus" />

            <TextView
                android:id="@+id/textview_queenwhite"
                style="@style/style_black_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_black_button"
                android:onClick="incrementQueenWhite"
                android:text="@string/button_plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_tower"
            style="@style/style_horizontal_linearlayout">

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="incrementTowerBlack"
                android:text="@string/button_plus" />

            <TextView
                android:id="@+id/textview_towerblack"
                style="@style/style_white_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementTowerBlack"
                android:text="@string/button_minus" />

            <ImageView
                style="@style/style_imageview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/towers"
                android:src="@drawable/chesstower" />

            <Button
                style="@style/style_black_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementTowerWhite"
                android:text="@string/button_minus" />

            <TextView
                android:id="@+id/textview_towerwhite"
                style="@style/style_black_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_black_button"
                android:onClick="incrementTowerWhite"
                android:text="@string/button_plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_runner"
            style="@style/style_horizontal_linearlayout">

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="incrementRunnerBlack"
                android:text="@string/button_plus" />

            <TextView
                android:id="@+id/textview_runnerblack"
                style="@style/style_white_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementRunnerBlack"
                android:text="@string/button_minus" />

            <ImageView
                style="@style/style_imageview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/runners"
                android:src="@drawable/chessrunner" />

            <Button
                style="@style/style_black_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementRunnerWhite"
                android:text="@string/button_minus" />

            <TextView
                android:id="@+id/textview_runnerwhite"
                style="@style/style_black_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_black_button"
                android:onClick="incrementRunnerWhite"
                android:text="@string/button_plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_knight"
            style="@style/style_horizontal_linearlayout">

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="incrementKnightBlack"
                android:text="@string/button_plus" />

            <TextView
                android:id="@+id/textview_knightblack"
                style="@style/style_white_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementKnightBlack"
                android:text="@string/button_minus" />

            <ImageView
                style="@style/style_imageview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/knights"
                android:src="@drawable/chessknight" />

            <Button
                style="@style/style_black_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementKnightWhite"
                android:text="@string/button_minus" />

            <TextView
                android:id="@+id/textview_knightwhite"
                style="@style/style_black_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_black_button"
                android:onClick="incrementKnightWhite"
                android:text="@string/button_plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_pawn"
            style="@style/style_horizontal_linearlayout">

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="incrementPawnBlack"
                android:text="@string/button_plus" />

            <TextView
                android:id="@+id/textview_pawnblack"
                style="@style/style_white_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_white_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementPawnBlack"
                android:text="@string/button_minus" />

            <ImageView
                style="@style/style_imageview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/pawns"
                android:src="@drawable/chesspawn" />

            <Button
                style="@style/style_black_button"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:onClick="decrementPawnWhite"
                android:text="@string/button_minus" />

            <TextView
                android:id="@+id/textview_pawnwhite"
                style="@style/style_black_textview"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <Button
                style="@style/style_black_button"
                android:onClick="incrementPawnWhite"
                android:text="@string/button_plus" />

        </LinearLayout>

        <Button
            android:id="@id/button_reset"
            style="@style/style_reset_button"
            android:background="@color/black"
            android:onClick="resetCounter"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>